--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
 .link {
   text-decoration: none;
   color: currentColor;
+  padding: 0;
+  margin: 0; 
 }
 
 /* ----------RESET STYLES RUN---------- */
@@ -46,74 +48,83 @@ ol {
 
 /* ----------RESET STYLES END---------- */
 
+/* base styles */
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  /* outline: 2px solid red;
+  outline-offset: -2px; */
+}
 
 /* ----------BODY---------- */
 
 body {
-  position: relative;
-  width: 1600px;
-  height: 2349px;
   font-family: var(--font-main);
   color: var(--font-main);
 }
 
 /* ----------HEADER---------- */
 
-.header-container {
-  position: absolute;
-  top: 0px;
-  left: 200px;
-  width: 1200px;
-  height: 80px;
-  padding: 0 15px 0 15px;
+
+.header-box {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
 }
-.header-label {
-  position: absolute;
-  top: 24px;
-  left: 15px;
+.header-box-1 {  
+  margin-right: 331px;
+}
+.header-logo-header-flx-block-one {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.header-logo {
   font-family: var(--font-second);
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: calc(31 /26);
   letter-spacing: 0.03em;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  margin-right: 93px;
 }
-.label-black {
+.logo-black {
   color: #212121;
 }
-.label-blue {
+.logo-blue {
   color: #2196f3;
 }
-.label-white {
-  color: #ffffff;
-}
 .header-flx-block-one {
-  position: absolute;
-  top: 30px;
-  left: 238px;
-  width: auto;
   display: flex;
   flex-direction: row;
+  gap: 50px;
+  padding: 0;
 }
 .header-text-1 {
-  margin: 32px 25px 32px 25px;
-  height: 16px;
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02em; 
 }
+.header-box-2 {
+  margin-right: 0;
+}     
 .header-flx-block-two {
-  position: absolute;
-  top: 32px;
-  right: 15px;
-  width: auto;
+  margin-top: 31px;
+  margin-bottom: 31px;
   display: flex;
-  justify-content: end;
+  flex-direction: row;
+  align-items: center;
+  gap: 50px;
 }
 .header-text-2 {
-  margin: 32px 0 32px 50px;
-  height: 16px;
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -125,23 +136,22 @@ body {
 .uniform-link-current {
   color: #2196f3;
 }
+.header-text-1,
+.header-text-2 {
+  padding-top: 31px;
+  padding-bottom: 31px;
+}
 
 /* ----------MAIN---------- */
 
-.hero-container {
-  position: absolute;
-  left: 0px;
-  top: 80px;
-  width: 1600px;
-  height: 600px;
+.hero {
   background-color: var(--bg-color-dark);
 }
+.hero-box {
+  padding: 200px 239px 200px 239px;
+}
 .hero-text {
-  position: absolute;
-  top: 150px;
-  left: 450px;
-  width: 700px;
-  height: 280px;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -149,14 +159,12 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #FFFFFF;
+  margin-bottom: 30px;
 }
 .btn {
-  position: absolute;
+  font: var(--font-main);
   width: 200px;
   height: 50px;
-  left: 700px;
-  bottom: 200px;
-  font: var(--font-main);
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
@@ -164,25 +172,17 @@ body {
   cursor: pointer;
   color: #FFFFFF;
   background-color: #2196f3;
+  margin: 0 250px 0 250px;
 }
 .hero-btn:hover,
 .hero-btn:focus {
   background-color:  #188ce8;
 }
 .unnamed-container {
-  position: absolute;
-  top: 774px;
-  left: 200px;
-  width: 1200px;
-  height: 101px;
-  padding: 0 15px 0 15px;
+  margin: 0;
+  padding: 94px 0 0 0;
 }
 .unnamed-flx-block {
-  position: absolute;
-  width: 1170px;
-  height: 101px;
-  margin: 0;
-  padding: 0;
   display: flex;
   align-items: stretch;
   gap: 30px;
@@ -192,7 +192,6 @@ body {
 .unnamed-txt-box-three,
 .unnamed-txt-box-four {
   width: 270px;
-  height: 101px;
 }
 .unnamed-title {
   margin: 0 0 0 10px;
@@ -209,62 +208,47 @@ body {
   letter-spacing: 0.03em;
   color: #757575;
 }
+.what {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .what-title {
-  position: absolute;
   width: 400px;
   height: 42px;
-  left: 600px;
-  top: 969px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  letter-spacing: 0.03em;
-}
-.what-pfoto-box {
-  position: absolute;
-  width: 1170px;
-  height: 294px;
-  left: 215px;
-  top: 1061px;
-  display: flex;
-  justify-content: space-between;
-  padding: 0px 0px 0px 0px;
-}
-.our-section {
-  position: absolute;
-  width: 1600px;
-  height: 648px;
-  left: 0px;
-  top: 1449px;
-  background-color: var(--bg-color-light);
-}
-.our-container {
-  position: absolute;
-  width: 1200px;
-  height: 648px;
-  left: 200px;
-  top: 0px;
-}
-.our-title {
-  position: absolute;
-  left: 465px;
-  top: 94px;
-  margin: 0;
-  width: 300px;
-  height: 94px;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
+  margin: 0 auto 50px;
   letter-spacing: 0.03em;
 }
+.what-pfoto-box {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+.our-section {
+  margin: 0;
+  padding: 94px 0 94px 0;
+  background-color: var(--bg-color-light);
+}
+.our-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  margin: 0 auto 50px;
+  padding: 0;
+  letter-spacing: 0.03em
+}
+.our-container {
+  margin: 0;
+  padding: 0;
+}
 .our-box-flx {
-  position: absolute;
-  width: 1170px;
-  height: 368px;
-  left: 0px;
-  top: 186px;
-  padding: 0 15px 0 15px;
+  margin: 50px 0 0 0;
+  padding: 0px;
   display: flex;
   align-items: stretch;
   gap: 30px;
@@ -294,56 +278,29 @@ body {
 
 /* ----------FOOTER---------- */
 
-.footer-one{
-  position: relative;
-  width: 1600px;
-  height: 252px;
-  left: 0px;
-  top: 2097px;
+.footer {
   background-color: var(--bg-color-dark);
-}
-.footer-two{
-  position: relative;
-  width: 1600px;
-  height: 252px;
-  left: 0px;
-  top: 1628px;
-  background-color: var(--bg-color-dark);
-}
-.footer-container{
-  position: absolute;
-  width: 1200px;
-  height: 252px;
-  left: 200px;
-  top: 0px;
-  padding-bottom: 15px;
-}
-.footer-label {
-  position: absolute;
-  left: 0px;
-  top: 60px;
+  padding: 60px 0 60px 0;
+} 
+.footer-logo {
   font-family: var(--font-second);
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: calc(31 /26);
   letter-spacing: 0.03em;
-  margin: 0 0 0 15px;
+  margin: 0 0 20px 0;
 }
-.label-white {
+.logo-white {
   color: #ffffff;
 }
 .address {
-  position: absolute;
-  left: 0px;
-  top: 111px;
   width: 231px;
   height: 81px;
 }
 .footer-text-one {
-  margin: 0 0 5px 15px;
-  left: 0px;
-  top: 110px;
+  margin: 0 0 10px 0;
+  padding: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -352,10 +309,8 @@ body {
   color: #ffffff;
 }
 .footer-text-two {
-  padding: 0px;
-  margin: 5px 0 0 15px;
-  left: 0px;
-  bottom: 50px;
+  margin: 0;
+  padding: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -369,29 +324,14 @@ body {
 /* --------------------PORTFOLIO-------------------- */
 
 .portfolio-line {
-  position: absolute;
-  left: 0px;
-  top: 80px;
-  width: 1600px;
   height: 1px;
   background-color: #ECECEC;
 }
-.portfolio-container{
-  position: absolute;
-  width: 1200px;
-  height: 1360px;
-  left: 200px;
-  top: 174px;
-  padding: 0 0 0 0;
-}
 .portfolio-filters{
-  position: absolute;
   width: 611px;
   height: 54px;
-  left: 295px;
-  top: 0px;
-  margin: 0 0 0 0;
-  padding: 0 0 0 0;
+  margin: 111px auto 34px;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
@@ -418,16 +358,12 @@ body {
   background-color: #2196f3;
 }
 .portfolio-projects {
-  position: absolute;
-  top: 88px;
-  width: 1170px;
-  height: 1272px;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
   gap: 30px;
-  margin: 0px;
-  padding: 0px 0px 0px 0px;
+  margin: 0;
+  padding: 0 0 94px 0;
 }
 .portfolio-project-1,
 .portfolio-project-2,
@@ -440,38 +376,33 @@ body {
 .portfolio-project-9 {
   width: 370px;
   height: 404px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 .portfolio-img {
   width: 370px;
   height: 294px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 } 
 .portfolio-border {
-  position: relative;
   width: 368px;
   height: 109px;
-  margin: 0px;
-  padding:0px;
+  margin: 0;
+  padding: 25px;
   border-left: 1px solid #F5F4FA;
   border-right: 1px solid #F5F4FA;
   border-bottom: 1px solid #F5F4FA;
 }
 .portfolio-name {
-  position: absolute;
-  top: 20px;
-  margin: 0 0 0 24px;
+  margin: 0;
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
   letter-spacing: 0.03em;
 }
 .portfolio-specialty {
-  position: absolute;
-  bottom: 20px;
-  margin: 0 0 0 24px;
+  margin: 0;
   font-weight: 400;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
