--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,8 @@ body {
 
 .hero {
   background-color: var(--bg-color-dark);
-}
-.hero-box {
-  padding: 200px 239px 200px 239px;
+  padding: 200px 0 200px 0;
+  margin: 0 0 94px 0;
 }
 .hero-text {
   width: 696px;
@@ -159,7 +158,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
 }
 .btn {
   font: var(--font-main);
@@ -172,17 +171,20 @@ body {
   cursor: pointer;
   color: #FFFFFF;
   background-color: #2196f3;
-  margin: 0 250px 0 250px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 .hero-btn:hover,
 .hero-btn:focus {
   background-color:  #188ce8;
 }
-.unnamed-container {
-  margin: 0;
-  padding: 94px 0 0 0;
+.unnamed {
+  padding: 0 0 94px 0;
 }
 .unnamed-flx-block {
+  padding: 0;
+  margin: 0;
   display: flex;
   align-items: stretch;
   gap: 30px;
@@ -194,7 +196,7 @@ body {
   width: 270px;
 }
 .unnamed-title {
-  margin: 0 0 0 10px;
+  margin: 0;
   font-weight: 700;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -209,7 +211,7 @@ body {
   color: #757575;
 }
 .what {
-  padding-top: 94px;
+  padding-top: 0;
   padding-bottom: 94px;
 }
 .what-title {
@@ -261,14 +263,17 @@ body {
   height: 368px;
   background-color: #ffffff;
 }
+.our-text-block {
+  padding: 30px 50px;
+}
 .our-name {
-  margin: 30px 0 10px 0;
+  margin: 0 0 10px 0;
   text-align: center;
   font-weight: 500;
   line-height: calc(19 / 16);
 }
 .our-specialty {
-  margin: 0 0 30px 0;
+  margin: 0;
   text-align: center;
   font-weight: 400px;
   line-height: calc(19 / 16);
@@ -294,12 +299,8 @@ body {
 .logo-white {
   color: #ffffff;
 }
-.address {
-  width: 231px;
-  height: 81px;
-}
 .footer-text-one {
-  margin: 0 0 10px 0;
+  margin: 0 0 9px 0;
   padding: 0;
   font-style: normal;
   font-weight: 400;
@@ -309,7 +310,7 @@ body {
   color: #ffffff;
 }
 .footer-text-two {
-  margin: 0;
+  margin: 9px 0 0 0;
   padding: 0;
   font-style: normal;
   font-weight: 400;
@@ -323,14 +324,16 @@ body {
 /* --------------------PORTFOLIO-------------------- */
 /* --------------------PORTFOLIO-------------------- */
 
-.portfolio-line {
-  height: 1px;
-  background-color: #ECECEC;
+.line {
+  border-bottom: 1px solid #ECECEC;
+}
+.portfolio {
+  padding: 94px 0 94px 0;
 }
 .portfolio-filters{
-  width: 611px;
-  height: 54px;
-  margin: 111px auto 34px;
+  width: 610px;
+  height: 34px;
+  margin: 16px auto 34px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
@@ -346,7 +349,7 @@ body {
   line-height: calc(26 / 16);
   letter-spacing: 0.06em;
   cursor: pointer;
-  margin: 15px 4px;
+  margin: 0 5px;
   padding: 3px 15px;
   color: #212121;
   background-color: #F5F4FA;
@@ -357,13 +360,14 @@ body {
   color: #FFFFFF;
   background-color: #2196f3;
 }
+
 .portfolio-projects {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
   gap: 30px;
   margin: 0;
-  padding: 0 0 94px 0;
+  padding: 0;
 }
 .portfolio-project-1,
 .portfolio-project-2,
@@ -374,28 +378,19 @@ body {
 .portfolio-project-7,
 .portfolio-project-8,
 .portfolio-project-9 {
-  width: 370px;
-  height: 404px;
   margin: 0;
   padding: 0;
 }
-.portfolio-img {
-  width: 370px;
-  height: 294px;
-  margin: 0;
-  padding: 0;
-} 
 .portfolio-border {
-  width: 368px;
-  height: 109px;
   margin: 0;
-  padding: 25px;
+  padding: 20px 24px;
   border-left: 1px solid #F5F4FA;
   border-right: 1px solid #F5F4FA;
   border-bottom: 1px solid #F5F4FA;
 }
 .portfolio-name {
-  margin: 0;
+  margin: 0 0 4px 0;
+  padding: 0;
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
@@ -403,6 +398,7 @@ body {
 }
 .portfolio-specialty {
   margin: 0;
+  padding: 0;
   font-weight: 400;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
