--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body {
 .hero {
   background-color: var(--bg-color-dark);
   padding: 200px 0 200px 0;
-  margin: 0 0 94px 0;
+  margin: 0;
 }
 .hero-text {
   width: 696px;
@@ -180,7 +180,7 @@ body {
   background-color:  #188ce8;
 }
 .unnamed {
-  padding: 0 0 94px 0;
+  padding: 94px 0 94px 0;
 }
 .unnamed-flx-block {
   padding: 0;
@@ -215,8 +215,6 @@ body {
   padding-bottom: 94px;
 }
 .what-title {
-  width: 400px;
-  height: 42px;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -249,7 +247,7 @@ body {
   padding: 0;
 }
 .our-box-flx {
-  margin: 50px 0 0 0;
+  margin: 0;
   padding: 0px;
   display: flex;
   align-items: stretch;
@@ -259,8 +257,6 @@ body {
 .our-box-two,
 .our-box-three,
 .our-box-four {
-  width: 270px;
-  height: 368px;
   background-color: #ffffff;
 }
 .our-text-block {
@@ -300,7 +296,7 @@ body {
   color: #ffffff;
 }
 .footer-text-one {
-  margin: 0 0 9px 0;
+  margin: 0;
   padding: 0;
   font-style: normal;
   font-weight: 400;
@@ -331,13 +327,10 @@ body {
   padding: 94px 0 94px 0;
 }
 .portfolio-filters{
-  width: 610px;
-  height: 34px;
-  margin: 16px auto 34px;
+  margin: 0 auto 50px;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
+  justify-content: center;  
 }
 .btn-flr-1,
 .btn-flr-2,
@@ -349,8 +342,8 @@ body {
   line-height: calc(26 / 16);
   letter-spacing: 0.06em;
   cursor: pointer;
-  margin: 0 5px;
-  padding: 3px 15px;
+  margin: 0 8px;
+  padding: 6px 22px;
   color: #212121;
   background-color: #F5F4FA;
   border: 2px solid #F5F4FA;;
